@@ -1,8 +1,8 @@
 package org.opentripplanner.ext.vectortiles.layers.vehiclerental;
 
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 import org.locationtech.jts.geom.Coordinate;
 import org.locationtech.jts.geom.Envelope;
@@ -11,52 +11,40 @@ import org.locationtech.jts.geom.Point;
 import org.opentripplanner.ext.vectortiles.LayerBuilder;
 import org.opentripplanner.ext.vectortiles.PropertyMapper;
 import org.opentripplanner.ext.vectortiles.VectorTilesResource;
-import org.opentripplanner.routing.graph.Graph;
 import org.opentripplanner.routing.vehicle_rental.VehicleRentalPlace;
 import org.opentripplanner.routing.vehicle_rental.VehicleRentalStationService;
-import org.opentripplanner.transit.service.TransitService;
 import org.opentripplanner.util.geometry.GeometryUtils;
 
-public class VehicleRentalLayerBuilder extends LayerBuilder<VehicleRentalPlace> {
+abstract class VehicleRentalLayerBuilder<T extends VehicleRentalPlace> extends LayerBuilder<T> {
 
-  static Map<MapperType, Function<Graph, PropertyMapper<VehicleRentalPlace>>> mappers = Map.of(
-    MapperType.Digitransit,
-    g -> DigitransitVehicleRentalPropertyMapper.create()
-  );
-  private final Graph graph;
+  private final VehicleRentalStationService service;
 
   public VehicleRentalLayerBuilder(
-    Graph graph,
-    TransitService transitService,
+    VehicleRentalStationService service,
+    Map<MapperType, PropertyMapper<T>> mappers,
     VectorTilesResource.LayerParameters layerParameters
   ) {
-    super(
-      layerParameters.name(),
-      mappers.get(MapperType.valueOf(layerParameters.mapper())).apply(graph)
-    );
-    this.graph = graph;
+    super(layerParameters.name(), mappers.get(MapperType.valueOf(layerParameters.mapper())));
+    this.service = service;
   }
 
   @Override
   protected List<Geometry> getGeometries(Envelope query) {
-    VehicleRentalStationService service = graph.getVehicleRentalStationService();
     if (service == null) {
       return List.of();
     }
-    return service
-      .getVehicleRentalPlaces()
+    return getVehicleRentalPlaces(service)
       .stream()
-      .map(vehicleRentalStation -> {
-        Coordinate coordinate = new Coordinate(
-          vehicleRentalStation.getLongitude(),
-          vehicleRentalStation.getLatitude()
-        );
+      .map(rental -> {
+        Coordinate coordinate = new Coordinate(rental.getLongitude(), rental.getLatitude());
         Point point = GeometryUtils.getGeometryFactory().createPoint(coordinate);
-        point.setUserData(vehicleRentalStation);
-        return point;
+        point.setUserData(rental);
+        return (Geometry) point;
       })
-      .collect(Collectors.toList());
+      .toList();
   }
+
+  protected abstract Collection<T> getVehicleRentalPlaces(VehicleRentalStationService service);
 
   enum MapperType {
     Digitransit,
